initial overlay added

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -6,5 +6,6 @@
         'base/layout';
 
 // importing components
-@import 'components/tiny/button',
-        'components/Header';
+@import 'components/minor/button',
+        'components/major/Header',
+        'components/major/Initial';
