--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -38,7 +38,7 @@ h6 {
   font-size: 14px; }
 
 .Header {
-  padding: 15px 0 15px 5px;
+  padding: 15px 0;
   width: 50px;
   background-color: #d7697f;
   position: absolute;
@@ -47,6 +47,7 @@ h6 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   border-right: 1px solid #cb465c3d;
   box-shadow: 0px 1px 8px 1px #cb465c73; }
   .Header-img {
@@ -54,7 +55,29 @@ h6 {
     border-radius: 50%; }
   .Header-right {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    text-align: center; }
   .Header-nav {
     color: #fff;
     margin-top: 15px; }
+  .Header-svg {
+    width: 25px;
+    height: 25px;
+    fill: #fff; }
+  .Header-text {
+    display: none;
+    font-size: 12px; }
+
+.Initial {
+  background: #d7697f;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .Initial-img {
+    border-radius: 50%; }
