--- a/styles/scss/components/major/_Header.scss
+++ b/styles/scss/components/major/_Header.scss
@@ -1,5 +1,5 @@
 .Header{
-    padding: 15px 0 15px 5px;
+    padding: 15px 0;
     width: 50px;
     background-color: #d7697f;
     position: absolute;
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     border-right: 1px solid #cb465c3d;
     box-shadow: 0px 1px 8px 1px #cb465c73;
 
@@ -19,10 +20,22 @@
     &-right{
         display: flex;
         flex-direction: column;
+        text-align: center;
     }
 
     &-nav{
         color: #fff;
         margin-top: 15px;
+    }
+
+    &-svg{
+        width: 25px;
+        height: 25px;
+        fill: #fff;
+    }
+
+    &-text{
+        display: none;
+        font-size: 12px;
     }
 }
